# drip-program

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  poc.py  pull_request_template.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: build-and-test.yml  ci.yml  ci_cd.yml  test.yml
.husky/: pre-commit
idl/: drip.json  drip.ts  idl.json
programs/dca-vault/: Cargo.toml
programs/dca-vault/src/: errors.rs  lib.rs
programs/dca-vault/src/errors/: mod.rs
programs/dca-vault/src/instructions/: check_balance_a.rs  check_balance_b.rs  check_vault_balance_a.rs  check_vault_balance_b.rs  close_position.rs  common.rs  deposit.rs  deposit_a.rs  get_dripped_amount_a.rs  get_withdrawable_balance_b.rs  init_vault.rs  init_vault_period.rs  init_vault_proto_config.rs  mod.rs  trigger_dca.rs  withdraw_a.rs  withdraw_b.rs
programs/dca-vault/src/interactions/: transfer_token.rs
programs/dca-vault/src/macros/: mod.rs
programs/dca-vault/src/math/: mod.rs
programs/dca-vault/src/state/: mod.rs  position.rs  swap.rs  traits.rs  vault.rs  vault_period.rs  vault_proto_config.rs
programs/drip/: Cargo.toml
programs/drip/src/: lib.rs
programs/drip/src/actions/: admin.rs  deposit.rs  drip.rs  init.rs  mod.rs  withdraw.rs
programs/drip/src/errors/: mod.rs
programs/drip/src/events/: mod.rs
programs/drip/src/instruction_accounts/: admin.rs  deposit.rs  drip.rs  ia_admin.rs  ia_drip.rs  ia_withdraw.rs  init.rs  mod.rs  withdraw.rs
programs/drip/src/instructions/: close_position.rs  deposit.rs  deposit_with_metadata.rs  deposit_with_metadata_with_referral.rs  deposit_with_referral.rs  drip_orca_whirlpool.rs  drip_spl_token_swap.rs  init_vault.rs  init_vault_period.rs  init_vault_proto_config.rs  mod.rs  trigger_dca.rs  update_vault_swap_whitelist.rs  withdraw_b.rs
programs/drip/src/interactions/: burn_token.rs  close_account.rs  create_token_metadata.rs  deposit.rs  deposit_utils.rs  drip_utils.rs  empty.rs  executor.rs  mint_token.rs  mod.rs  set_mint_authority.rs  swap_orca_whirlpool.rs  swap_spl.rs  swap_spl_token_swap.rs  swap_whirlpool.rs  token.rs  transfer_token.rs  withdraw_utils.rs
programs/drip/src/macros/: mod.rs
programs/drip/src/math/: mod.rs
programs/drip/src/processors/: deposit.rs
programs/drip/src/state/: mod.rs  oracle_config.rs  position.rs  traits.rs  vault.rs  vault_period.rs  vault_proto_config.rs
programs/drip/src/test/: fixtures.rs
programs/whirlpool/: Cargo.toml
programs/whirlpool/src/: lib.rs
programs/whirlpool/src/state/: mod.rs  tick.rs  whirlpool.rs
scripts/: README.md  build.sh  deploy-devnet-staging.sh  deserializeBorsh.ts  estimate_deploy_cost.sh  postProcessIdl.js  privToByteArray.py  test.sh  test_docker_local.sh
tests/: dca-vault.ts  drip.ts
tests/deps-test/: deps.ts  setupKeeperBot.ts
tests/integration-tests/: closePosition.ts  deposit.ts  dripOrcaWhirlpool.ts  dripSPLTokenSwap.ts  initVault.ts  initVaultPeriod.ts  initVaultProtoConfig.ts  program.ts  testDripSPLTokenSwap.ts  triggerDCA.ts  withdrawB.ts
tests/integration-tests/batch1/: close.ts  closePosition.ts  deposit.ts  externalAccounts.ts  initOracleConfig.ts  program.ts  v1ToV2Migration.ts
tests/integration-tests/batch2/: depositWithMetadata.ts  initVault.ts  setVaultOracleConfig.ts  withdrawB.ts  withdrawBWithReferrer.ts
tests/integration-tests/batch3/: dripSPLTokenSwap.ts  dripV1.ts  (+3 more)
tests/utils/: Account.util.ts  AccountUtils.ts  ExpectUtils.ts  Granularity.ts  KeypairUtils.ts  PDAUtils.ts  Program.util.ts  ProgramUtils.ts  SetupUtils.ts  SolUtils.ts  Swap.util.ts  SwapUtils.ts  Token.util.ts  TokenUtils.ts  Transaction.util.ts  TransactionUtils.ts  Vault.util.ts  VaultUtils.ts  account.util.ts  amount.ts  common.util.ts  config.ts  config.util.ts  drip.util.ts  dripV1Common.utils.ts  error.util.ts  index.ts  instruction.util.ts  log.util.ts  program.util.ts  pyth.ts  setup.util.ts  setupKeeperBot.ts  setupKeeperBot.util.ts  setupMPLTokenMetadata.ts  setupWhirlpool.ts  sol.util.ts  swap.util.ts  token.util.ts  tokenSwapUtil.ts  (+4 more)
(+13 files in other folders)
