[package]
name = "dca-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dca_vault"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-token-swap = { version = "2.0.0", features = ["no-entrypoint", "production"] }

[dev-dependencies]
test-case = "2.0.0"
