[package]
name = "drip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
pyth-sdk-solana = "0.6.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-swap = { version = "2.0.0", features = ["no-entrypoint", "production"] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
whirlpool = { path = "../whirlpool", features = ["no-entrypoint"] }

[dev-dependencies]
test-case = "2.0.0"
lazy_static = "1.4.0"