[package]
name = "drip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint", "production"] }
mpl-token-metadata = { version = "4.1.1" }
whirlpool = { path = "../whirlpool", features = ["no-entrypoint"] }
solana-program = "=1.18.0"

[dev-dependencies]
test-case = "3.3.1"
lazy_static = "1.4.0"
